# xcalib

./: .gitignore  AdobeGammaTest.icm  CMakeLists.txt  COPYING  ChangeLog  Makefile  README  README.md  README.profilers  gamma_2_2_bright.icc  gamma_2_2_lowContrast.icc  lcms1.13_patch  lcms1.13_patch_b  resource.rc  xcalib.1  xcalib.c  xcalib.completion  xcalib.i18n.h  xcalib.i18n.json
docs/man/: xcalib.1
docs/man/de/: xcalib.1
docs/md/: xcalib.md  xcalibde.md
extras/: oyjl_args.c  xcalib.desktop
fglrx/: fglrx_gamma.h  libfglrx_gamma.so.1.0
icclib/: Jamfile  Licence.txt  Makefile  Makefile.IBMNT  Makefile.OSX  Makefile.UNIX  Makefile.WNT  Readme.txt  fbtest.c  icc.c  icc.h  icc9809.h  iccdump.c  icclu.c  iccrw.c  iccstd.c  icctest.c  lutest.c  xxxx.icm
